Bug 859711 - Add mapping of between m4a extension name and audio/mp4 in extraMimeEntries. r=padenot, a=tef+